<resources>
    <string name="app_name">FitAssistant</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="session_init_as">Has iniciat sessió com: </string>
    <string name="user_not_created">L\'usuari no s\'ha pogut crear!</string>
    <string name="register">Registra\'t</string>
    <string name="incorrect_credentials">Error! Credencials incorrectes!</string>
    <string name="enter">Entra</string>
    <string name="password">Contrasenya</string>
    <string name="email">Correu electrònic</string>
    <string name="log_in">Inicia sessió</string>
    <string name="wifi_connected">Xarxa wifi connectada!</string>
    <string name="data_connected">Xarxa movil connectada!</string>
    <string name="no_network">No tens cap xarxa activa!</string>
    <string name="inv_code">Codi d\'invitació</string>
    <string name="user_created">Usuari creat correctament! </string>
    <string name="init_session">Has iniciat sessió com: </string>
    <string name="welcome">Benvingut</string>
    <string name="short_password">Contrasenya massa curta o bé poc segura!</string>
    <string name="password_not_same">Les contrasenyes no coincideixen!</string>
    <string name="diets">Dietes</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="exercises">Exercicis</string>
    <string name="init">Inici</string>
    <string name="welcome_to_fit">Benvingut/da a FitAssitant!\n Fes un seguiment de les teves dietes i rutines\n Vols aconseguir els teus objectius fàcilment?\n T\'ho posem fàcil!"</string>
    <string name="save_gym">Guardar el meu gimnàs!</string>
    <string name="map">Mapa</string>
    <string name="receipts">Receptes</string>
    <string name="new_message">Nou missatge</string>
    <string name="mail_not_valid">Correu invàlid!</string>
    <string name="mail_changed_ok">Dades guardades correctament!</string>
    <string name="uploading_image">Pujant la imatge</string>
    <string name="image_uploaded_ok">Imatge pujada satisfactòriament</string>
    <string name="exercise_to_favs">Exercici afegit a favorits!</string>
    <string name="receipts_to_favs">Recepta afegida a favorits!</string>
    <string name="routines">Rutines</string>
    <string name="fcm_token_failed">Fetching FCM registration token failed</string>
    <string name="token_registered">TOKEN REGISTERED from FCM: </string>
    <string name="correct_password_change">Contrasenya canviada correctament!</string>
    <string name="series">Series</string>
    <string name="reps">Repeticions</string>
    <string name="add_favourites">Afegir a favorits</string>
    <string name="create_exercise">Crear exercici</string>
    <string name="my_messages">Els meus missatges</string>
    <string name="default_password_hint">********</string>
    <string name="repetir_contrasenya">Repetir contrasenya</string>
    <string name="new_password">Nova contrasenya</string>
    <string name="save_password">Guardar contrasenya</string>
    <string name="create_receipt">Crear recepta</string>
    <string name="rations">Racions</string>
    <string name="time">Temps</string>
    <string name="ingredients">Ingredients</string>
    <string name="destiny">Destinatari</string>
    <string name="send">Enviar!</string>
    <string name="message">Missatge</string>
    <string name="write_new_message">Escriu el nou missatge!</string>
    <string name="active_network">Xarxa activa</string>
    <string name="change_image">Canviar imatge</string>
    <string name="user">Usuari</string>
    <string name="name_surname">Nom i cognoms</string>
    <string name="mail_">Correu</string>
    <string name="mail_hint">exemple@gmail.com</string>
    <string name="phone">Telèfon</string>
    <string name="phone_hint">000 00 00 00</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="save">Guardar</string>
    <string name="change_password">Canviar contrasenya</string>
    <string name="pes_kg">Pes (kg)</string>
    <string name="my_gym">El meu gym</string>
    <string name="xat">Xat</string>
    <string name="message_sent">Missatge enviat!</string>
    <string name="drawer_signout">Tanca sessió</string>
    <string name="drawer_config">Configuració</string>
    <string name="drawer_chat">Xat</string>
    <string name="drawer_workout">Rutines</string>
    <string name="drawer_diets">Dietes</string>
    <string name="drawer_map">Mapa</string>
    <string name="drawer_home">Inici</string>
    <string name="exercise_part">Múscul/s</string>
    <string name="exercise_intensity">Intensitat</string>
    <string name="home_dietsbutton">Explora les dietes</string>
    <string name="home_workoutbutton">Explora les rutines</string>
    <string name="data_saved">Dades guardades correctament</string>
    <string name="current_location">Current location:\n</string>
    <string name="location_button_click">MyLocation button clicked</string>
    <string name="gym_saved">Gimnàs afegit a les preferències</string>
    <string name="wifi">Wi-Fi</string>
    <string name="change_network">Canviar Xarxa</string>
    <string name="name">name</string>
    <string name="latlong">latlong</string>
    <string name="gyms">gyms</string>
    <string name="wifi_selected_deactivated">Wi-Fi marcat com a preferència i està desactivat</string>
    <string name="connexion_lost">Connexió perduda, es necessita per funcionar la app</string>
    <string name="data_active">Dades</string>
    <string name="error_tag">Error on getting token</string>
    <string name="listPref">listPref</string>
    <string name="configuracio">Configuració</string>
    <string name="no_image">No tens imatge guardada</string>
    <string name="image_uploaded">Imatge pujada satisfactòriament</string>
    <string name="default_messager">support_ekke@gmail.com</string>
</resources>